package com.github.yck.pattern.structural.bridge;

public interface Brand {
    public void open();
    public void call();
    public void close();
}
